# ext2-rs

./: Cargo.toml
src/: lib.rs  parse.rs  schema.rs
tests/resources/: test-superblock
