[package]
name = "ext2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.2"
null-terminated = "0.3.17"
uuid = { version = "1.3.0", features = ["zerocopy"], default-features = false }
zerocopy = "0.6.1"
